Mon Aug  3 12:46:35 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_Connector_exec.cpp:
        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_Connector_exec.h:
          Moved HelloListener to the cpp file. Added an enabled flag to
          be able to stop publishing data, default is now true,
          should be modified to false later

Fri Jul 31 14:27:35 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReader.cpp
        * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp
        * connectors/dds4ccm/impl/ndds/QueryCondition.cpp
          More glue code

Fri Jul 31 13:46:35 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReader.cpp
        * connectors/dds4ccm/impl/ndds/DataWriter.cpp
        * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp
        * connectors/dds4ccm/impl/ndds/InstanceHandle_t.h
        * connectors/dds4ccm/impl/ndds/InstanceHandleSeq.h
          Added InstanceHandleSeq support. Note that we have added a new
          trait to the CORBA sequences, knowing _size_type.

Fri Jul 31 12:43:35 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReader.cpp
        * connectors/dds4ccm/impl/ndds/DataWriter.cpp
        * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp
        * connectors/dds4ccm/impl/ndds/Publisher.cpp
        * connectors/dds4ccm/impl/ndds/PublisherListener.cpp
        * connectors/dds4ccm/impl/ndds/PublisherListener.h
        * connectors/dds4ccm/impl/ndds/Subscriber.cpp
        * connectors/dds4ccm/impl/ndds/Topic.cpp
          More methods and more states

Fri Jul 31 12:12:35 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DomainParticipantFactory.cpp
        * connectors/dds4ccm/impl/ndds/DomainParticipantFactory.h